--- a/app/src/main/res/layout/activity_xl_2_sqlite.xml
+++ b/app/src/main/res/layout/activity_xl_2_sqlite.xml
@@ -32,4 +32,16 @@
             android:layout_marginLeft="5dp"
             android:textColor="@color/colorAccent" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/lv_users"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="#ffffff" />
+    </LinearLayout>
 </LinearLayout>
