--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/github"
+        android:visible="false"
         android:icon="@drawable/ic_action_github"
         android:title="@string/github"
-        android:id="@+id/github"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 
 </menu>
