--- a/app/src/main/res/layout/activity_sqlite_2_xl.xml
+++ b/app/src/main/res/layout/activity_sqlite_2_xl.xml
@@ -30,9 +30,9 @@
         android:background="@drawable/border"
         android:hint="@string/hint_enter_name"
         android:inputType="text"
-        android:textAlignment="center"
         android:padding="16dp"
         android:paddingLeft="20dp"
+        android:textAlignment="center"
         android:textColor="@color/textcolor2"
         android:textColorHint="@color/textcolor2"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/area_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/pin_code"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -97,15 +97,36 @@
         android:background="@drawable/border"
         android:hint="@string/hint_enter_phone_number"
         android:inputType="phone"
-        android:textAlignment="center"
         android:padding="16dp"
         android:paddingLeft="20dp"
+        android:textAlignment="center"
         android:textColor="@color/textcolor2"
         android:textColorHint="@color/textcolor2"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
+    <EditText
+        android:id="@+id/email_id"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/border"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:padding="16dp"
+        android:paddingLeft="20dp"
+        android:textAlignment="center"
+        android:textColor="@color/textcolor2"
+        android:textColorHint="@color/textcolor2"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
+        app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
     <Button
         android:id="@+id/btn_save_user"
@@ -113,14 +134,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/save"
         android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
@@ -129,14 +150,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/export"
         android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline9"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
@@ -179,7 +200,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="481dp" />
+        app:layout_constraintGuide_begin="616dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
@@ -193,7 +214,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="563dp" />
+        app:layout_constraintGuide_begin="704dp" />
 
     <android.support.constraint.Barrier
         android:id="@+id/barrier"
@@ -235,5 +256,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="200dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="457dp" />
 
 </android.support.constraint.ConstraintLayout>
