Export and Save buttons unified
Colors modified

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9E9D24</color>
-    <color name="colorPrimaryDark">#827717</color>
+    <!--<color name="colorPrimary">#558B2F</color>-->
+    <!--<color name="colorPrimaryDark">#33691E</color>-->
+    <color name="colorPrimary">#2E7D32</color>
+    <color name="colorPrimaryDark">#1B5E20</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="lightgreen">#B2FF59</color>
     <color name="textcolor1">#FFFFFF</color>
@@ -9,6 +11,8 @@
     <color name="bgcolor">#FFFFFF</color>
 
     <color name="blue_button_border">#B2FF59</color>
-    <color name="gradient_start">#9E9E9E</color>
-    <color name="gradient_end">#757575</color>
+    <!--<color name="gradient_start">#1B5E20</color>-->
+    <!--<color name="gradient_end">#2E7D32</color>-->
+    <color name="gradient_start">#558B2F</color>
+    <color name="gradient_end">#33691E</color>
 </resources>
