--- a/app/src/main/res/layout/activity_sqlite_2_xl.xml
+++ b/app/src/main/res/layout/activity_sqlite_2_xl.xml
@@ -137,10 +137,12 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/save"
         android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
@@ -156,6 +158,7 @@
         android:background="@color/colorPrimary"
         android:text="@string/export"
         android:textColor="@color/colorAccent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -200,7 +203,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="616dp" />
+        app:layout_constraintGuide_begin="575dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
@@ -214,7 +217,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="704dp" />
+        app:layout_constraintGuide_begin="643dp" />
 
     <android.support.constraint.Barrier
         android:id="@+id/barrier"
@@ -255,13 +258,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="200dp" />
+        app:layout_constraintGuide_begin="277dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="457dp" />
+        app:layout_constraintGuide_begin="473dp" />
 
 </android.support.constraint.ConstraintLayout>
