--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ajts.androidmads.sqlite2xlDemo.MainActivity"
+    tools:context="com.arunj.dravidianarts.uyirCBE.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <Button
@@ -20,6 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        android:elevation="18dp"
+        android:translationZ="8dp"
         android:text="@string/sqlite_2_excel"
         android:textColor="@color/colorAccent" />
 
