--- a/app/src/main/res/layout/activity_sqlite_2_xl.xml
+++ b/app/src/main/res/layout/activity_sqlite_2_xl.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout2"
@@ -11,260 +16,199 @@
     tools:context=".SQLite2ExcelActivity">
 
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/l1"
+        android:layout_width="match_parent"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="78dp" />
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/edt_user"
-        android:layout_width="0dp"
+        <EditText
+            android:id="@+id/edt_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:hint="@string/hint_enter_name"
+            android:inputType="text"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/l2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/border"
-        android:hint="@string/hint_enter_name"
-        android:inputType="text"
-        android:padding="16dp"
-        android:paddingLeft="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/textcolor2"
-        android:textColorHint="@color/textcolor2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_below="@id/l1"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/area_name"
-        android:layout_width="0dp"
+        <EditText
+            android:id="@+id/edt_c_no"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border"
+            android:hint="@string/hint_enter_phone_number"
+            android:inputType="phone"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/l3"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/border"
-        android:ems="10"
-        android:hint="@string/area"
-        android:inputType="textPersonName"
-        android:padding="16dp"
-        android:paddingLeft="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/textcolor2"
-        android:textColorHint="@color/textcolor2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_below="@id/l2"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/pin_code"
-        android:layout_width="0dp"
+        <EditText
+            android:id="@+id/area_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border"
+            android:hint="@string/area"
+            android:inputType="textPersonName"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/l4"
+        android:layout_width="match_parent"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_below="@id/l3"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/border"
-        android:baselineAligned="false"
-        android:ems="10"
-        android:hint="@string/pincode"
-        android:inputType="phone|number"
-        android:padding="16dp"
-        android:paddingLeft="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/textcolor2"
-        android:textColorHint="@color/textcolor2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+        android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/pin_code"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border"
+            android:ems="10"
+            android:hint="@string/pincode"
+            android:inputType="phone|number"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/edt_c_no"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/l5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/border"
-        android:hint="@string/hint_enter_phone_number"
-        android:inputType="phone"
-        android:padding="16dp"
-        android:paddingLeft="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/textcolor2"
-        android:textColorHint="@color/textcolor2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_below="@id/l4"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/email_id"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/border"
-        android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:padding="16dp"
-        android:paddingLeft="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/textcolor2"
-        android:textColorHint="@color/textcolor2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline10" />
+        <EditText
+            android:id="@+id/email_id"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border"
+            android:ems="10"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_save_user"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/l6"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/save"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        android:paddingLeft="80dp"
+        android:paddingRight="80dp"
+        android:paddingBottom="80dp"
+        android:layout_below="@id/l5"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_save_user"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="@string/save"
+            android:textColor="@color/colorAccent" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_export"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/export"
         android:textColor="@color/colorAccent"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btn_export_with_exclude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/export_exclude"
         android:textColor="@color/textcolor2"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        tools:layout_editor_absoluteX="114dp" />
+        android:visibility="invisible" />
 
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        tools:layout_editor_absoluteX="-14dp">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible">
 
         <ListView
             android:id="@+id/lv_users"
             android:layout_width="wrap_content"
-            android:layout_height="325dp"
+            android:layout_height="wrap_content"
             android:divider="#ffffff"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="397dp">
+            tools:layout_editor_absoluteY="0dp">
 
 
         </ListView>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="575dp" />
+        android:layout_height="wrap_content" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="166dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="643dp" />
-
-    <android.support.constraint.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="268dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="365dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="40dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="350dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="277dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="473dp" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
+</ScrollView>
