--- a/app/src/main/res/layout/activity_sqlite_2_xl.xml
+++ b/app/src/main/res/layout/activity_sqlite_2_xl.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,6 +19,18 @@
     <LinearLayout
         android:id="@+id/l1"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_below="@id/l1"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/l2"
+        android:layout_width="match_parent"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:layout_height="wrap_content"
@@ -26,7 +38,22 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edt_user"
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border"
+            android:hint="Enter date"
+            android:inputType="date"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+
+        <EditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
@@ -44,31 +71,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/l2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:layout_below="@id/l1"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/edt_c_no"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:background="@drawable/border"
-            android:hint="@string/hint_enter_phone_number"
-            android:inputType="phone"
-            android:padding="16dp"
-            android:paddingLeft="20dp"
-            android:textAlignment="center"
-            android:textColor="@color/textcolor2"
-            android:textColorHint="@color/textcolor2" />
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/l3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,19 +80,20 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/area_name"
+            android:id="@+id/product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
-            android:hint="@string/area"
-            android:inputType="textPersonName"
+            android:hint="Enter Product"
+            android:inputType="text"
             android:padding="16dp"
             android:paddingLeft="20dp"
             android:textAlignment="center"
             android:textColor="@color/textcolor2"
             android:textColorHint="@color/textcolor2" />
+
     </LinearLayout>
 
 
@@ -104,15 +107,15 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/pin_code"
+            android:id="@+id/codeNo"
             android:layout_width="match_parent"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
             android:ems="10"
-            android:hint="@string/pincode"
-            android:inputType="phone|number"
+            android:hint="Enter code no"
+            android:inputType="number"
             android:padding="16dp"
             android:paddingLeft="20dp"
             android:textAlignment="center"
@@ -130,15 +133,15 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/email_id"
-            android:layout_gravity="center"
+            android:id="@+id/batch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
             android:ems="10"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
+            android:hint="Enter batch"
+            android:inputType="text"
             android:padding="16dp"
             android:paddingLeft="20dp"
             android:textAlignment="center"
@@ -150,10 +153,36 @@
         android:id="@+id/l6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_below="@id/l5"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/total"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border"
+            android:ems="10"
+            android:hint="Enter Total"
+            android:inputType="number"
+            android:padding="16dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/textcolor2"
+            android:textColorHint="@color/textcolor2" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/l7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="80dp"
         android:paddingRight="80dp"
         android:paddingBottom="80dp"
-        android:layout_below="@id/l5"
+        android:layout_below="@id/l6"
         android:orientation="vertical">
 
         <Button
