--- a/app/src/main/res/layout/activity_sqlite_2_xl.xml
+++ b/app/src/main/res/layout/activity_sqlite_2_xl.xml
@@ -167,7 +167,7 @@
             android:background="@drawable/border"
             android:ems="10"
             android:hint="Enter Total"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:padding="16dp"
             android:paddingLeft="20dp"
             android:textAlignment="center"
