requirement based modification

--- a/app/src/main/res/layout/activity_sqlite_2_xl.xml
+++ b/app/src/main/res/layout/activity_sqlite_2_xl.xml
@@ -44,7 +44,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
-            android:hint="Enter date"
+            android:hint="Date"
             android:inputType="date"
             android:padding="16dp"
             android:paddingLeft="20dp"
@@ -86,7 +86,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
-            android:hint="Enter Product"
+            android:hint="Product"
             android:inputType="text"
             android:padding="16dp"
             android:paddingLeft="20dp"
@@ -114,8 +114,8 @@
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
             android:ems="10"
-            android:hint="Enter code no"
-            android:inputType="number"
+            android:hint="Code no"
+            android:inputType="text"
             android:padding="16dp"
             android:paddingLeft="20dp"
             android:textAlignment="center"
@@ -140,7 +140,7 @@
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
             android:ems="10"
-            android:hint="Enter batch"
+            android:hint="Batch"
             android:inputType="text"
             android:padding="16dp"
             android:paddingLeft="20dp"
@@ -166,7 +166,7 @@
             android:layout_marginTop="60dp"
             android:background="@drawable/border"
             android:ems="10"
-            android:hint="Enter Total"
+            android:hint="Total"
             android:inputType="numberDecimal"
             android:padding="16dp"
             android:paddingLeft="20dp"
